Füge Upload-Schritt für PDF-Artefakt in latexmk.yml hinzu

--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -16,3 +16,9 @@ jobs:
           format: pdf
           filename: PrepTable.tex
           options: -shell-escape
+      
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: PrepTable-PDF
+          path: PrepTable.pdf
